# vector-db-service

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: .gitkeep  README.txt  sbicard_chunks.txt
examples/: basic_usage.py
scripts/: __init__.py  index_sbicard.py  index_sbicard_chunks_txt.py  parse_sbicard_chunks_txt.py  parse_sbicard_md.py  search_sbicard.py
tests/: __init__.py  test_client.py  test_integration.py  test_search_strategies.py
vector_db/: __init__.py  client.py  config.py  elastic.py  models.py
vector_db/search/: __init__.py  base.py  bm25.py  hybrid.py  knn.py
